@@ -59,7 +59,10 @@ setup(name='zope.container',
                               ], include_dirs=['include']),
                    ],
       extras_require=dict(
-          test=['zope.copypastemove']),
+          test=['zope.copypastemove',
+                'zope.app.testing',
+                'zope.app.component',
+                ]),
       install_requires=['setuptools',
                         'zope.interface',
                         'zope.cachedescriptors',
