@@ -1,7 +1,5 @@
 <configure
    xmlns="http://namespaces.zope.org/zope"
-   xmlns:browser="http://namespaces.zope.org/browser"
-   xmlns:xmlrpc="http://namespaces.zope.org/xmlrpc"
    i18n_domain="zope"
    >
 
@@ -81,22 +79,20 @@
     <allow interface=".constraints.IItemTypePrecondition" />
   </class>
 
-  <view
-      for="zope.container.interfaces.IItemContainer"
-      type="zope.publisher.interfaces.browser.IBrowserRequest"
+  <adapter
+      for="zope.container.interfaces.IItemContainer
+           zope.publisher.interfaces.browser.IBrowserRequest"
       provides="zope.publisher.interfaces.browser.IBrowserPublisher"
       factory="zope.container.traversal.ItemTraverser"
       permission="zope.Public"
-      allowed_interface="zope.publisher.interfaces.browser.IBrowserPublisher"
       />
 
-  <view
-      for="zope.container.interfaces.ISimpleReadContainer"
-      type="zope.publisher.interfaces.browser.IBrowserRequest"
+  <adapter
+      for="zope.container.interfaces.ISimpleReadContainer
+	   zope.publisher.interfaces.browser.IBrowserRequest"
       provides="zope.publisher.interfaces.browser.IBrowserPublisher"
       factory="zope.container.traversal.ItemTraverser"
       permission="zope.Public"
-      allowed_interface="zope.publisher.interfaces.browser.IBrowserPublisher"
       />
 
 </configure>
