@@ -1,0 +1,10 @@
+<configure
+    xmlns="http://namespaces.zope.org/zope">
+
+    <include package="zope.component" file="meta.zcml"/>
+    <include package="zope.security" file="meta.zcml" />
+    <include package="zope.security" file="permissions.zcml" />
+
+    <include package="zope.container"/>
+
+</configure>
